--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -36,3 +36,18 @@ msgstr "Vous êtes connecté en tant que %(username)s."
 msgid "not_logged_in"
 msgstr "Vous n'êtes pas connecté."
 
+msgid "home_title"
+msgstr "Bienvenue chez Holberton"
+
+msgid "home_header"
+msgstr "Bonjour monde!"
+
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
+
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
+
+msgid "current_time_zone"
+msgstr "Fuseau horaire actuel : %(timezone)s."
+
